<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:id="@+id/main_linearLayout"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ece8e4">

    <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:text="2048"
                android:textSize="40sp"
                android:textColor="#787266"
                />

        <com.example.game2048test.ScoreBoxView
            android:id="@+id/main_actual_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/main_best_score"
            android:layout_toStartOf="@id/main_best_score"
            custom:label_text="Score"
             />

        <com.example.game2048test.ScoreBoxView
            android:id="@+id/main_best_score"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            custom:label_text="Best"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </RelativeLayout>

    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:weightSum="1"
            >

        <TextView
                android:id="@+id/main_text"
                android:layout_height="wrap_content"
                android:layout_width="1dp"
                android:text="@string/slogan"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:textColor="#787266"
                android:maxLines="2"
                android:layout_weight="0.6"
                />

        <Button
                android:layout_marginLeft="5dp"
                android:id="@+id/main_button_new_game"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/new_game"
                android:textSize="18sp"
                android:layout_weight="0.4"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="#787266"/>

    </LinearLayout>


    <com.example.game2048test.MatrixView
        android:id="@+id/matrix_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#787266"/>

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#787266"
           />

     </LinearLayout>

</LinearLayout>

