<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ece8e4">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/titan_one"
            android:paddingLeft="30dp"
            android:text="@string/search_by_name"
            android:textColor="#787266"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/name_to_search"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:paddingLeft="10dp"
            android:textColor="#787266" />

        <Button
            android:id="@+id/search_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/search_button"
            android:textColor="#787266"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/titan_one"
            android:paddingLeft="30dp"
            android:text="@string/search_by_score"
            android:textColor="#787266"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <EditText
            android:id="@+id/score_to_search"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:autofillHints=""
            android:textColor="#787266"
             />


        <Spinner
            android:id="@+id/spinner_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="#787266"/>

        <Button
            android:id="@+id/search_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/search_button"
            android:textColor="#787266"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/order_by_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/titan_one"
            android:paddingLeft="10dp"
            android:text="Name"
            android:textColor="#787266" />

        <Button
            android:id="@+id/order_by_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/titan_one"
            android:paddingLeft="10dp"
            android:text="Score"
            android:textColor="#787266"/>

        <Button
            android:id="@+id/order_by_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/titan_one"
            android:paddingLeft="10dp"
            android:text="Time"
            android:textColor="#787266"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_scores"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="#ece8e4" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/titan_one"
            android:text="Update"
            android:textColor="#787266" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/titan_one"
            android:text="Delete"
            android:textColor="#787266" />

    </LinearLayout>


</LinearLayout>